--- a/CheckWebsite.html
+++ b/CheckWebsite.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="Content-Security-Policy" content="block-all-mixed-content">
 	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-	<title>Document</title>
+	<title>Check Website Support</title>
 </head>
 
 <body>
