--- a/CheckWebsite.html
+++ b/CheckWebsite.html
@@ -16,7 +16,7 @@
 
 <script>
 	async function check(url){
-        let cors = "https://cors-anywhere.herokuapp.com/
+        let cors = "https://cors-anywhere.herokuapp.com/";
         let checkUrl= cors+url;
         let response = await fetch(checkUrl);
 
