remove unwanted file :heavy_minus_sign:

--- a/CheckWebsite.html
+++ b/CheckWebsite.html
@@ -16,18 +16,17 @@
 
 <script>
 	async function check(url){
-        let cors = "https://cors-anywhere.herokuapp.com/";  //This API enables cross-origin requests to anywhere.
+        let cors = "https://cors-anywhere.herokuapp.com/";     //This API enables cross-origin requests to anywhere.
 
-        let checkUrl= cors+url;         //Add cors and checking website url this solve the cross-origin requests error             
-        let response = await fetch(checkUrl);           //JavaScript can send network requests to the server
+        let checkUrl= cors+url;       //Add cors and checking website url this solve the cross-origin requests error             
+        let response = await fetch(checkUrl);      //JavaScript can send network requests to the server
 
-        if (response.ok) { // if HTTP-status is 200-299
+        if (response.ok) {      //if HTTP-status is 200-299
             alert("Website Support On Your Network");         
         } else {
             alert("Website Not Support On Your Network");
         }
-
    }
 
-   check("https://www.youtube.com/");
+   check("https://www.youtube.com/");   //Function Call
 </script>
